2010-09-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator/TopologyGenerator.h: Rename
	ZIGZAG_DIAMOND_TOPOLOGY to DIAMOND_ZIGZAG_TOPOLOGY.
	* src/staticGen.cpp: Likewise.

	* include/generator/DiamondZigZagOptTopoGenerator.h: Remove edges
	when optimizing the topology.

2010-09-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/staticGen.cpp: Separate original topo generation from
	optimal topo generation.

	* include/generator/TopologyGenerator.h: Remove local interface map.

	* include/generator/DiamondTopoGenerator.h (create_opt_interface): Remove.

	* include/generator/DiamondOptTopoGenerator.h: Now inherits from
	OptTopologyGenerator

	* include/generator/ContextGenerator.h: include OptTopologyGenerator.h

	* include/Makefile.am: Add new header files.

	* include/generator/DiamondArbitraryTopoGenerator.h: New file.
	* include/generator/OptTopologyGenerator.h: Likewise.
	* include/generator/DiamondZigZagTopoGenerator.h: Likewise.
	* include/generator/DiamondZigZagOptTopoGenerator.h: Likewise.

	* m4/boost.m4: merged from trunk, to fix  the problem with boost 1.44 iostream lib check.

2010-09-15  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/tests/testClaspResultOnlineParser.cpp: Rename V --> belief_state.

	* include/generator/TopologyGenerator.h: Rename iterator.

	* include/generator/DiamondOptTopoGenerator.h: New file.

	* src/tests/testBlockingClasp.cpp: New testcase.
	* src/tests/testGraphProp.cpp: Likewise.

2010-09-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/QueryPlan.h: Clean up.
	* include/QueryPlan.tcc: Likewise.
	* src/ContextGenerator.cpp: Likewise.
	* src/QueryPlan.cpp: Likewise.

	* src/staticGen.cpp: Commandlines generated. Adapt dlv command
	lines generator. Now all the xxx1 methods are gone.


2010-09-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/staticGen.cpp: Copy lcim to opt_lcim.

	* include/QueryPlan.h: Use VertexMapPtr.
	* src/QueryPlan.cpp: Likewise.

2010-09-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>
